@@ -114,6 +114,8 @@ COMMAND CHANGES (see man pages for details)
  -- Added SLURM_GPUS_ON_NODE environment variable within each job/step.
  -- sreport - change to sorting TopUsage by the --tres option.
  -- slurmrestd - do not run allow operation as SlurmUser/root by default.
+ -- "scontrol show node" now shows State as base_state+flags instead of
+    shortened state with flags appended.
 
 API CHANGES
 ===========
