@@ -137,6 +137,8 @@ documents those changes that are of interest to users and administrators.
  -- Alter sreport's cluster utilization report column name from
     'Reserved' to 'Planned' to match the nomenclature of the 'Planned' node.
  -- Add StateComplete format option to sinfo to show base_state+flags.
+ -- "scontrol show node" now shows State as base_state+flags instead of
+    shortened state with flags appended.
 
 * Changes in Slurm 20.11.9
 ==========================
